# Code-Review

./: .dockerignore  .env.example  .gitignore  01_config.py  02_audit_service.py  03_auth_middleware.py  04_app.py  AGENTS.md  API.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  EMAILS.md  GITHUB_ACTIONS_SETUP.md  GOOGLE_CLOUD_RUN_DEPLOYMENT.md  GOOGLE_CLOUD_RUN_QUICKSTART.md  HOWTO.md  MULTI_SERVICE_DEPLOYMENT.md  NOTIFICATIONS.md  PROJECT_STATUS.md  README.md  SSO.md  autonomyx-pricing.html  autonomyx-privacy.html  autonomyx-terms.html  cloudbuild.yaml  deploy-cloudrun.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  k8s-cloudrun-service.yaml  next.config.js  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  (+3 more)
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
agent/: SKILLS.md  manager.py  tools.py
app/: globals.css  layout.tsx  page.tsx
auth/: server.js
emails/: index.js
notifications/: index.js
src/: App.tsx  index.css  index.ts
tests/: e2e.spec.js  test_api_review_flow.py  test_api_security.py  test_claude_agent_sdk.py  test_context_budget.py  test_core_logic.py  test_main.py  test_main_port_resolution.py  test_notification_service.py  test_runtime_profiles.py  test_sso_service.py
(+262 files in other folders)
