[project]
name = "agentnxt-codereviewer"
version = "0.1.0"
description = "AgentNxt CodeReviewer production application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "anthropic>=0.39.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
